# split-buffer

./: Cargo.toml
examples/: simple.rs
src/: lib.rs
