[package]
name = "split-buffer"
version = "0.1.0"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An efficient buffer for splittable byte slices"
repository = "https://github.com/kardeiz/split-buffer"
documentation = "https://docs.rs/split-buffer"

[dependencies]
